--- a/agents/cycle.cfg
+++ b/agents/cycle.cfg
@@ -1,5 +1,6 @@
 # Cleanup
-export KRAKEN_CLEANUP_CYCLE="pandaf:009:data,mc
+export KRAKEN_CLEANUP_CYCLE="pandaf:010:data,mc
+                             pandaf:009:data,mc
                              pandaf:004:mc"
 #export KRAKEN_CLEANUP_CYCLE="pandaf:008:data,mc
 #                             pandaf:007:data
