tools for knowing what is going on in transfers.

--- a/agents/cycle.cfg
+++ b/agents/cycle.cfg
@@ -1,5 +1,6 @@
 # Cleanup
-export KRAKEN_CLEANUP_CYCLE="pandaf:011:data,mc
+export KRAKEN_CLEANUP_CYCLE="pandaf:012:data,mc
+                             pandaf:011:data,mc
                              pandaf:010:data-2018prompt,data,mc
                              pandaf:009:data,mc
                              pandaf:004:mc"
