--- a/agents/cycle.cfg
+++ b/agents/cycle.cfg
@@ -1,9 +1,5 @@
 # Cleanup
-export KRAKEN_CLEANUP_CYCLE="pandaf:012:data,mc
-                             pandaf:011:data,mc
-                             pandaf:010:data-2018prompt,data,mc
-                             pandaf:009:data,mc
-                             pandaf:004:mc"
+export KRAKEN_CLEANUP_CYCLE="pandaf:012:data,mc"
 #export KRAKEN_CLEANUP_CYCLE="pandaf:008:data,mc
 #                             pandaf:007:data
 #                             pandaf:005:data,mc
@@ -12,4 +8,4 @@ export KRAKEN_CLEANUP_OPTIONS="--cleanup"
 
 # Review
 export KRAKEN_REVIEW_CYCLE=$KRAKEN_CLEANUP_CYCLE
-export KRAKEN_REVIEW_OPTIONS="--submit --useExistingLfns --useExistingSites --nJobsMax=20000"
+export KRAKEN_REVIEW_OPTIONS="--submit --useExistingLfns --useExistingSites --nJobsMax=40000"
