--- a/agents/cycle.cfg
+++ b/agents/cycle.cfg
@@ -1,5 +1,7 @@
 # Cleanup
-export KRAKEN_CLEANUP_CYCLE="pandaf:012:data,mc"
+export KRAKEN_CLEANUP_CYCLE="pandaf:013:data-2018prompt,mc
+                             pandaf:012:data,mc
+                             pandaf:009:data,mc"
 #export KRAKEN_CLEANUP_CYCLE="pandaf:008:data,mc
 #                             pandaf:007:data
 #                             pandaf:005:data,mc
