Giving EAPS another try.

--- a/agents/cycle.cfg
+++ b/agents/cycle.cfg
@@ -1,5 +1,6 @@
 # Cleanup
-export KRAKEN_CLEANUP_CYCLE="pandaf:013:data-2018prompt,mc
+export KRAKEN_CLEANUP_CYCLE="pandaf:014:data,mc
+                             pandaf:013:data-2018prompt,mc
                              pandaf:012:data,mc
                              pandaf:009:data,mc"
 #export KRAKEN_CLEANUP_CYCLE="pandaf:008:data,mc
