Newest version including nano.

--- a/agents/cycle.cfg
+++ b/agents/cycle.cfg
@@ -1,8 +1,13 @@
 # Cleanup
-export KRAKEN_CLEANUP_CYCLE="pandaf:014:data,mc
-                             pandaf:013:data-2018prompt,mc
-                             pandaf:012:data,mc
-                             pandaf:009:data,mc"
+export KRAKEN_CLEANUP_CYCLE="nanoao:501:nano
+                             pandaf:014:mc,data-2018prompt,data-2016,data
+                             pandaf:013:mc
+                             pandaf:009:mc
+                             pandaf:004:mc"
+#export KRAKEN_CLEANUP_CYCLE="pandaf:014:data,mc
+#                             pandaf:013:data-2018prompt,mc
+#                             pandaf:012:data,mc
+#                             pandaf:009:data,mc"
 #export KRAKEN_CLEANUP_CYCLE="pandaf:008:data,mc
 #                             pandaf:007:data
 #                             pandaf:005:data,mc
