--- a/agents/cycle.cfg
+++ b/agents/cycle.cfg
@@ -1,9 +1,13 @@
 # Cleanup
-export KRAKEN_CLEANUP_CYCLE="nanoao:501:nano
-                             pandaf:014:mc,data-2018prompt,data-2016,data
+export KRAKEN_CLEANUP_CYCLE="nanoao:507:nano
+                             nanoao:506:nano
+                             nanoao:505:nano
+                             pandaf:014:mc,data-2018prompt,data-2016,data,mc-2016
                              pandaf:013:mc
-                             pandaf:009:mc
-                             pandaf:004:mc"
+                             pandaf:012:mc
+                             pandaf:009:mc"
+#                             pandaf:004:mc"
+#                             pandaf:014:mc,mc-2016,data-2018prompt,data-2016,data
 #export KRAKEN_CLEANUP_CYCLE="pandaf:014:data,mc
 #                             pandaf:013:data-2018prompt,mc
 #                             pandaf:012:data,mc
