--- a/agents/cycle.cfg
+++ b/agents/cycle.cfg
@@ -1,11 +1,11 @@
 # Cleanup
-export KRAKEN_CLEANUP_CYCLE="nanoao:507:nano
-                             nanoao:506:nano
-                             nanoao:505:nano
-                             pandaf:014:mc,data-2018prompt,data-2016,data,mc-2016
-                             pandaf:013:mc
-                             pandaf:012:mc
-                             pandaf:009:mc"
+export KRAKEN_CLEANUP_CYCLE="nanosu:A00:nano
+                             nanoao:510:nano"
+#                             pandaf:013:mc
+#                             pandaf:012:mc
+#                             pandaf:009:mc
+#                             pandaf:014:mc-2016,mc"
+#                             pandaf:014:mc,data-2018prompt,data-2016,data,mc-2016
 #                             pandaf:004:mc"
 #                             pandaf:014:mc,mc-2016,data-2018prompt,data-2016,data
 #export KRAKEN_CLEANUP_CYCLE="pandaf:014:data,mc
@@ -21,3 +21,4 @@ export KRAKEN_CLEANUP_OPTIONS="--cleanup"
 # Review
 export KRAKEN_REVIEW_CYCLE=$KRAKEN_CLEANUP_CYCLE
 export KRAKEN_REVIEW_OPTIONS="--submit --useExistingLfns --useExistingSites --nJobsMax=40000"
+export KRAKEN_CONDOR_REQ="req-onlyEaps.sub"
