--- a/agents/cycle.cfg
+++ b/agents/cycle.cfg
@@ -1,6 +1,6 @@
 # Cleanup
 export KRAKEN_CLEANUP_CYCLE="nanosu:A00:nano
-                             nanoao:510:nano"
+                             nanoao:513:nano"
 #                             pandaf:013:mc
 #                             pandaf:012:mc
 #                             pandaf:009:mc
@@ -21,4 +21,6 @@ export KRAKEN_CLEANUP_OPTIONS="--cleanup"
 # Review
 export KRAKEN_REVIEW_CYCLE=$KRAKEN_CLEANUP_CYCLE
 export KRAKEN_REVIEW_OPTIONS="--submit --useExistingLfns --useExistingSites --nJobsMax=40000"
-export KRAKEN_CONDOR_REQ="req-onlyEaps.sub"
+#export KRAKEN_CONDOR_REQ=
+export KRAKEN_CONDOR_REQ="req-none.sub"
+#export KRAKEN_CONDOR_REQ="req-onlyEaps.sub"
