Updates on cmsprod.

--- a/agents/cycle.cfg
+++ b/agents/cycle.cfg
@@ -1,13 +1,5 @@
 # Cleanup
-export KRAKEN_CLEANUP_CYCLE="nanosu:A00:nano
-                             nanoao:513:nano"
-#                             pandaf:013:mc
-#                             pandaf:012:mc
-#                             pandaf:009:mc
-#                             pandaf:014:mc-2016,mc"
-#                             pandaf:014:mc,data-2018prompt,data-2016,data,mc-2016
-#                             pandaf:004:mc"
-#                             pandaf:014:mc,mc-2016,data-2018prompt,data-2016,data
+export KRAKEN_CLEANUP_CYCLE="nanohr:D01:nano nanoao:518:nano nanoao:517:nano nanomw:B00:nanomw nanosu:A01:nano"
 #export KRAKEN_CLEANUP_CYCLE="pandaf:014:data,mc
 #                             pandaf:013:data-2018prompt,mc
 #                             pandaf:012:data,mc
@@ -21,6 +13,6 @@ export KRAKEN_CLEANUP_OPTIONS="--cleanup"
 # Review
 export KRAKEN_REVIEW_CYCLE=$KRAKEN_CLEANUP_CYCLE
 export KRAKEN_REVIEW_OPTIONS="--submit --useExistingLfns --useExistingSites --nJobsMax=40000"
-#export KRAKEN_CONDOR_REQ=
-export KRAKEN_CONDOR_REQ="req-none.sub"
+export KRAKEN_CONDOR_REQ=
+#export KRAKEN_CONDOR_REQ="req-none.sub"
 #export KRAKEN_CONDOR_REQ="req-onlyEaps.sub"
