Adding new production and updating to the condor_schedd.

--- a/agents/cycle.cfg
+++ b/agents/cycle.cfg
@@ -1,6 +1,5 @@
 # Cleanup
-export KRAKEN_CLEANUP_CYCLE="nanohr:D02:nano nanoao:523:nano"
-#export KRAKEN_CLEANUP_CYCLE="nanohr:D02:nano nanoao:523:nano nanoao:522:nano nanosu:A02:nano nanosc:E08:nanosc nanosc:E07:nanosc nanodp:F01:nanodp"
+export KRAKEN_CLEANUP_CYCLE="nanoao:524:nano nanoao:523:nano nanosu:A02:nano nanohr:D02:nano"
 export KRAKEN_CLEANUP_OPTIONS="--cleanup"
 
 # Review
