--- a/agents/cycle.cfg
+++ b/agents/cycle.cfg
@@ -1,5 +1,5 @@
 # Cleanup
-export KRAKEN_CLEANUP_CYCLE=" nanohr:D03:nano nanoao:524:nano nanoao:523:nano nanosu:A02:nano nanohr:D02:nano"
+export KRAKEN_CLEANUP_CYCLE=" nanohr:D03:nano nanoao:525:nano nanoao:524:nano nanoao:523:nano nanosu:A02:nano nanohr:D02:nano"
 export KRAKEN_CLEANUP_OPTIONS="--cleanup"
 
 # Review
