Check-in with smaller updates.

--- a/agents/cycle.cfg
+++ b/agents/cycle.cfg
@@ -1,5 +1,5 @@
 # Cleanup
-export KRAKEN_CLEANUP_CYCLE=" nanohr:D03:nano nanoao:525:nano nanoao:524:nano nanoao:523:nano nanosu:A02:nano nanohr:D02:nano"
+export KRAKEN_CLEANUP_CYCLE=" nanoao:529:nano nanoao:530:nano nanohr:D04:nano nanodp:F03:nanodp nanosu:A02:nano"
 export KRAKEN_CLEANUP_OPTIONS="--cleanup"
 
 # Review
@@ -14,3 +14,4 @@ export KRAKEN_CONDOR_NCPUS="2"
 #export KRAKEN_CONDOR_REQ="req-none.sub"
 #export KRAKEN_CONDOR_REQ="req-skipAll.sub"
 #export KRAKEN_CONDOR_REQ="req-onlyEaps.sub"
+#export KRAKEN_CONDOR_REQ="req-slc9.sub"
