--- a/agents/cycle.cfg
+++ b/agents/cycle.cfg
@@ -1,5 +1,5 @@
 # Cleanup
-export KRAKEN_CLEANUP_CYCLE=" nanoao:531:nano nanohr:D05:nano nanosu:A02:nano nanoao:529:nano nanoao:530:nano nanohr:D04:nano nanodp:F03:nanodp"
+export KRAKEN_CLEANUP_CYCLE=" nanohr:D06:nano nanoao:532:nano nanosu:A02:nano nanoao:531:nano nanohr:D05:nano nanoao:529:nano nanoao:530:nano nanohr:D04:nano nanodp:F03:nanodp"
 export KRAKEN_CLEANUP_OPTIONS="--cleanup"
 
 # Review
